# newsbot-public

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.web  README.md  cloudbuild.yaml  pyproject.toml  renovate.json  test_output.txt
.github/: dependabot.yml
.github/actions/find-pr/: action.yml
.github/actions/set-pending-status/: action.yml
.github/actions/setup-coverage-config/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/update-pr-status/: action.yml
.github/workflows/: _paths_filter.yml  archive_old_articles.yml  code_quality.yml  docker_control.yml  docker_self_hosted.yml  docker_self_hosted_triggers.yml  pipeline_production_self_hosted.yml  pipeline_test_self_hosted.yml  pipeline_test_self_hosted_docker.yml  push-screenshots.yml  security.yml  set_pending_status.yml  smoke_test.yml  sync_to_public.yml  tests.yml  tests_docker.yml  tests_self_hosted.yml  tests_self_hosted_docker.yml
docs/: development.md  how-it-works.html
scripts/: archive_old_articles.py  check-ignore-comments.sh  docker-entrypoint.sh  generate_og_image.py  generate_test_email_report.py  scheduler.py
src/after_analysis/: __init__.py  _test_email.py  _test_supabase_upload.py  email_sender.py  supabase_upload.py
src/after_analysis/email/: __init__.py  _config.py  _providers.py  _report.py  _tokens.py
src/api/: __init__.py  app.py  handlers.py  job_manager.py
src/newsbot/: __init__.py  color_utils.py  constants.py  llm_provider.py  main.py  model_cache.py  models.py  pipeline.py  preview_fixtures.py  summary_writer.py  test_data.py
src/newsbot/agents/: judge_agent.py  name_validation_agent.py  report_agent.py  scraper_agent.py  sentiment_agent.py  story_clustering_agent.py  summarization_agent.py
src/newsbot/agents/prompts/: __init__.py
src/newsbot/agents/prompts/gemini/: additional_points_extraction.txt  article_summarization.txt  judge_rewrite.txt  judge_rewrite_default.txt  judge_rewrite_meta_commentary.txt  judge_rewrite_off_topic.txt  judge_rewrite_wrong_format.txt  judge_validation.txt  key_topics_extraction.txt  source_additional_points_summarization.txt  story_summary_building.txt  story_summary_refinement.txt  story_title.txt  weekly_overview.txt
src/newsbot/agents/prompts/llama/: additional_points_extraction.txt  article_summarization.txt  judge_rewrite.txt  judge_rewrite_default.txt  judge_rewrite_meta_commentary.txt  judge_rewrite_off_topic.txt  judge_rewrite_wrong_format.txt  judge_validation.txt  (+8 more)
src/newsbot/error_handling/: database_handler.py  email_handler.py  email_template.txt
src/newsbot/llm_provider/: __init__.py  _utils.py  gemini.py  ollama.py
src/newsbot/managers/: __init__.py  agent_manager.py  database_manager.py
src/newsbot/templates/: top_stories_report.html  top_stories_report.md  top_stories_report.txt  top_stories_report_email.html  weekly_report.html
src/newsbot/utils/: __init__.py  common.py
src/utilities/: __init__.py  django_models.py  django_setup.py  email.py  models.py  storage.py
src/web/: __init__.py  manage.py
src/web/newsserver/: adapters.py  admin.py  apps.py  auth_helpers.py  constants.py  context_processors.py  datatypes.py  middleware.py  models.py  palettes.py  signals.py  site_urls.py  sitemaps.py  urls.py  utils.py  views.py  widgets.py
src/web/newsserver/management/: __init__.py
src/web/newsserver/migrations/: 0001_initial.py  0002_alter_newsconfig_display_name_alter_newsconfig_key_and_more.py  0003_alter_logentry_config_name_alter_newsconfig_key.py  0004_analysissummary_scrapesummary.py  0005_remove_logentry.py  0006_article.py  0007_alter_article_url_article_unique_url_per_config.py  0008_create_subscriber_configs_table.py  0009_fix_subscriber_configs_column_name.py  0010_fix_foreign_key_constraints.py  0011_newssource_alter_newsconfig_key_and_more.py  0012_newsconfig_country_newsconfig_database_url_and_more.py  0013_add_article_config_fk.py  0014_remove_newsconfig_email_enabled_and_more.py  0015_topic_newsconfig_topics.py  0016_remove_scheduler_timezone.py  0017_remove_newsconfig_scheduler_daily_scrape_hour_and_more.py  0018_newsconfig_exclude_articles_from_configs.py  0019_subscriber_request.py  0020_newsconfig_published_for_subscription.py  0021_subscriber_as_auth_user.py  0022_fix_socialaccount_user_fk.py  0023_fix_admin_log_user_fk.py  0024_fix_account_emailaddress_user_fk.py  0025_subscriberrequest_admin_notified_at_and_more.py  0026_fix_subscriberrequest_user_fk.py  0027_alter_newssource_type.py  0028_alter_newsconfig_llm_defaults.py  0029_remove_logging_config.py  0030_newsconfig_hero_colors.py  0031_newsconfig_hero_color_middle.py  0032_alter_newsconfig_llm_judge_model_and_more.py  0033_configsuggestion.py  0034_newsconfig_summarization_explain_for_outsiders.py  0035_update_deprecated_judge_model.py
src/web/newsserver/services/: __init__.py  config_service.py  log_service.py  report_service.py
src/web/web/: asgi.py  marketing_urls.py  settings.py  urls.py  wsgi.py
src/web/web/templates/: base.html
tests/core_tests/: __init__.py  conftest.py  test_api.py  test_email_error_handler.py  test_email_receivers_override.py  test_email_sender.py  test_hooks.py  test_jobs_today.py  test_judge_agent.py  test_llm_provider_retry.py  test_logging.py  test_main_cli.py  test_managers.py  test_model_cache.py  test_models.py  test_name_validation_agent.py  test_pipeline.py  test_report_agent.py  test_scheduler.py  test_scheduler_refresh.py  test_scraper_agent.py  test_scraper_full_content.py  test_sentiment_agent.py  test_storage.py  test_story_clustering_agent.py  test_summarization_agent.py  test_summary_writer.py  test_test_data.py  test_topic_filtering.py  test_utilities_email.py  test_utils_and_database.py
tests/django_tests/: __init__.py  conftest.py  test_admin.py  test_auth_helpers.py  test_management_commands.py  test_models.py  test_run_list_view.py  test_scheduler_calendar.py  test_screenshots.py  test_services.py  test_site_urls.py  test_subscriber_request_and_signup.py  test_urls.py  test_utils.py  test_views.py
(+30 files in other folders)
