[project]
name = "newsbot"
version = "0.1.0"
description = "A news aggregation and analysis bot using LLMs."
readme = "README.md"
authors = [
    { name = "Jan Friedmann", email = "newsbot@gmx.net" }
]
packages = [
    { include = "newsbot", from = "src" },
    { include = "after_analysis", from = "src" },
    { include = "web", from = "src" },
    { include = "utilities", from = "src" },
    { include = "api", from = "src" },
]
requires-python = ">=3.12"

dependencies = [
    "jaraco-context>=6.1.0", # vulnerability fix
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "pyyaml>=6.0",
]

[project.scripts]
newsbot = "newsbot.main:main"
start = "api.app:start"

[build-system]
requires = ["uv_build>=0.9.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
newsbot = [
    "django>=5.2.8",
    "dj-database-url>=2.3.0",
    "psycopg2-binary>=2.9.9",
    "supabase>=2.0.0",
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.10",
    "lxml>=4.9.3",
    "requests>=2.31.0",
    "trafilatura>=2.0.0",
    "google-genai>=1.56.0",
    "ollama>=0.1.0",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "sentence-transformers[onnx]>=2.2.0",
    "sentencepiece>=0.1.99",
    "spacy>=3.7.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "xx-ent-wiki-sm @ https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.8.0/xx_ent_wiki_sm-3.8.0-py3-none-any.whl",
    "pysentimiento>=0.7.0",
    "textblob>=0.17.1",
    "vadersentiment>=3.3.2",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "jinja2>=3.1.2",
    "css-inline>=0.18.0",
    "tenacity>=8.2.0",
    "typer>=0.21.1",
]
serve = [
    "django>=5.2.8",
    "django-allauth>=65.0.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.3.0",
    "requests>=2.31.0",
    "supabase>=2.0.0",
    "whitenoise>=6.8.0",
]
api = [
    { include-group = "newsbot" },
    "django-allauth>=65.0.0",  # required: API loads Django settings which include allauth in INSTALLED_APPS
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
raspberrypi = [
    { include-group = "newsbot" },
    "sqlalchemy>=2.0.45", # temporary dependency for supabase migrations
    "watchdog>=6.0.0",
]
test = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.0",
    "playwright>=1.40.0",
    "pytest>=7.4.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.5.0",
]
dev = [
    "django-stubs>=5.2.8",
    "pre-commit>=4.5.1",
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
]

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 79

[tool.ruff.lint.pycodestyle]
max-doc-length = 72
max-line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "G004",  # logging uses f-string
    "LOG015", # uses root logger instead of file logger
    "PLR0913", # too many arguments in function
    "INP001", # implicit namespace packages (missing __init__.py)
    "BLE001", # bare except
    "PLW0603", # use of global statement for update
    "TRY003", # long exception messages outside of exception class
    "EM101", # use of string literal in exception message
    "ANN002", # missing type annotation for args
    "ANN003", # missing type annotation for kwargs
    "T201",  # print statements in scripts
    "S607", # starting process without specifying full path
    "D212", # multi-line docstrings start at second line
    "D203", # no blank line before class docstring
]

[tool.ruff.format]
docstring-code-line-length = 72

# ignore files automatically generated by Django
[tool.ruff.lint.per-file-ignores]
"src/utilities/__init__.py" = ["PLC0415"]  # lazy import needed to avoid circular Django setup
"src/web/web/__init__.py" = ["ALL"]
"src/web/newsserver/migrations/*" = ["ALL"]
"src/web/*" = ["TID253"]  # allow django/newsserver imports in Django app
"src/web/newsserver/adapters.py" = ["ARG002"]  # request required by base class signature
"src/web/web/urls.py" = ["ARG001"]  # admin login replacement must match method signature
"src/web/web/*sgi.py" = ["E402"] # import path manipulation is intentional
"src/utilities/django_setup.py" = ["TID252", "TID253", "E402"]  # allow django import in setup module
"src/utilities/django_models.py" = ["TID252", "TID253", "E402", "F401"]  # allow web import in model proxy
"src/utilities/database_migration.py" = ["ALL"] # temporary file
"src/utilities/config_migration.py" = ["ALL"] # temporary file
"tests/*" = ["ALL"]  # ignore all in tests

[tool.ruff.lint.flake8-tidy-imports]
banned-module-level-imports = ["pysentimiento", "google", "ollama"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --log-cli-level=INFO --reuse-db"
pythonpath = ["src"]
DJANGO_SETTINGS_MODULE = "web.web.settings"

# Suppress third-party and environment warnings we cannot fix
filterwarnings = [
    "ignore::DeprecationWarning:pyiceberg.*",
    "ignore:No directory at.*staticfiles:UserWarning",
]

# Markers for different test suites
markers = [
    "use_real_ollama: mark test to use real ollama (requires ENABLE_OLLAMA=true and not in CI)",
    "django_db: marks tests that require Django database",
]

[tool.ty.src]
exclude = [
    "src/web/newsserver/models.py", # exclude Django ORM models
]

[tool.ty.environment]
extra-paths = ["src/web"]

[[tool.ty.overrides]]
include = ["tests/**"]
rules = { unresolved-import = "ignore", unresolved-attribute = "ignore" }

[[tool.ty.overrides]]
include = [
    "src/newsbot/summary_writer.py",
    "src/after_analysis/email_sender.py",
    "src/web/newsserver/management/commands/create_test_user.py",
    "src/web/newsserver/management/commands/create_staff_subscriber.py",
]
rules = { unresolved-attribute = "ignore" }  # Django ORM manager is added at runtime

[[tool.ty.overrides]]
include = ["src/web/web/urls.py"]
rules = { invalid-assignment = "ignore" }  # admin.site.login replaced with redirect view
